--- a/src/frontend/src/games/TicTacToe/TicTacToe.css
+++ b/src/frontend/src/games/TicTacToe/TicTacToe.css
@@ -1,9 +1,3 @@
-/*body {
-    font: 14px sans-serif;
-    /* Century Gothic", Futura
-    /*margin: 20px;
-}*/
-
 .tictactoe ol, ul {
     padding-left: 30px;
 }
@@ -46,6 +40,11 @@
     flex-direction: row;
 }
 
+.tictactoe .game-board {
+    min-width: 100px;
+}
+
 .tictactoe .game-info {
     margin-left: 20px;
+    min-width: 200px;
 }
